--- a/app/partials/partial1.html
+++ b/app/partials/partial1.html
@@ -7,6 +7,10 @@
     <div class="span2"></div>
   </div>
 
+  <div class="row-fluid">
+    <button ng-click="getLocalData()" class="btn">Get User Data</button>
+  </div>
+
   <div class="list-container row-fluid">
       <div class="list-body span6">
 
