--- a/app/partials/partial1.html
+++ b/app/partials/partial1.html
@@ -11,6 +11,9 @@
     <input type="text" ng-model="myLink" ></input>
     <button ng-click="getUrlData(myLink)" class="btn">Get link preview</button>
   </div>
+  <ul class="thumbnails">
+    <li>{{metadata}}</li>
+  </ul>
 
   <!--Enter new item-->
   <div class="row-fluid">
