--- a/app/css/app.css
+++ b/app/css/app.css
@@ -34,7 +34,7 @@
 }
 
 .omnibar {
-  
+ 
 }
 
 li {
@@ -43,4 +43,12 @@ li {
 
 .delete-link {
   display: inline-block;
+}
+
+input {
+    border: 0;
+    outline: 0;
+    background: transparent;
+    border-bottom: 2px solid black;
+    width: 200px;
 }
